// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CompletedSeparator when not showing completed tasks matches snapshot 1`] = `
<div
  className="Separator"
>
  <span
    className="Text"
  >
    Completed: (5)
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="More"
  >
    <img
      alt="More"
      className="Icon Inverted"
      src="/svgs/v.svg"
      style={
        Object {
          "height": "1em",
          "width": "1em",
        }
      }
    />
  </span>
  <div
    className="Line"
  />
</div>
`;

exports[`CompletedSeparator when showing completed tasks matches snapshot 1`] = `
<div
  className="Separator"
>
  <span
    className="Text"
  >
    Completed: (10)
  </span>
  <span
    onClick={[Function]}
    onKeyUp={[Function]}
    role="button"
    tabIndex={0}
    title="More"
  >
    <img
      alt="More"
      className="Icon"
      src="/svgs/v.svg"
      style={
        Object {
          "height": "1em",
          "width": "1em",
        }
      }
    />
  </span>
  <div
    className="Line"
  />
</div>
`;
